tests/iterable/iterable.exp
Error ----------------------------------------------------------------------------------------------------- array.js:7:1

Cannot cast array literal to `Iterable` because in property `@@iterator` > the return value > type argument `Yield` [1]:
string [2] is incompatible with number [3]. [incompatible-type]

   array.js:7:1
      7| ['hi'] as Iterable<number>; // Error string ~> number
         ^^^^^^

References:
   <BUILTINS>/core.js:1833:30
   1833| interface $IteratorProtocol<+Yield,+Return=void,-Next=void> {
                                      ^^^^^ [1]
   array.js:7:2
      7| ['hi'] as Iterable<number>; // Error string ~> number
          ^^^^ [2]
   array.js:7:20
      7| ['hi'] as Iterable<number>; // Error string ~> number
                            ^^^^^^ [3]


Error ----------------------------------------------------------------------------------------------------- array.js:8:1

Cannot cast array literal to `Iterable` because in property `@@iterator` > the return value > type argument `Yield` [1]:
number [2] is incompatible with string [3]. [incompatible-type]

   array.js:8:1
      8| ['hi', 1] as Iterable<string>; // Error number ~> string
         ^^^^^^^^^

References:
   <BUILTINS>/core.js:1833:30
   1833| interface $IteratorProtocol<+Yield,+Return=void,-Next=void> {
                                      ^^^^^ [1]
   array.js:8:8
      8| ['hi', 1] as Iterable<string>; // Error number ~> string
                ^ [2]
   array.js:8:23
      8| ['hi', 1] as Iterable<string>; // Error number ~> string
                               ^^^^^^ [3]


Error --------------------------------------------------------------------------------------------- caching_bug.js:21:79

Cannot return `x` because in property `@@iterator` > the return value > type argument `Yield` [1]: number [2] is
incompatible with string [3]. [incompatible-type]

   caching_bug.js:21:79
     21| function miss_the_cache(x: Array<string | number>): Iterable<string> { return x; }
                                                                                       ^

References:
   <BUILTINS>/core.js:1833:30
   1833| interface $IteratorProtocol<+Yield,+Return=void,-Next=void> {
                                      ^^^^^ [1]
   caching_bug.js:21:43
     21| function miss_the_cache(x: Array<string | number>): Iterable<string> { return x; }
                                                   ^^^^^^ [2]
   caching_bug.js:21:62
     21| function miss_the_cache(x: Array<string | number>): Iterable<string> { return x; }
                                                                      ^^^^^^ [3]


Error ----------------------------------------------------------------------------------------- iterator_result.js:23:31

Cannot return object literal because in property `value`: string [1] is incompatible with undefined [2].
[incompatible-type]

   iterator_result.js:23:31
   23|         return { done, value: "still going..." }; // Error string ~> void
                                     ^^^^^^^^^^^^^^^^ [1]

References:
   iterator_result.js:20:36
   20|     next(): IteratorResult<string, void> {
                                          ^^^^ [2]


Error ----------------------------------------------------------------------------------------- iterator_result.js:25:16

Cannot return object literal because property `value` is missing in object literal [1] but exists in object type [2].
[incompatible-type]

   iterator_result.js:25:16
     25|         return { done }; // Error void ~> string, LTI: prop-missing of value
                        ^^^^^^^^ [1]

References:
   <BUILTINS>/core.js:1823:5
             v
   1823|   | {
   1824|     done: false,
   1825|     +value: Yield,
   1826|     ...
   1827| };
         ^ [2]


Error ----------------------------------------------------------------------------------------------------- map.js:14:10

Cannot return `map` because in property `@@iterator` > the return value > type argument `Yield` [1]: tuple type [2] is
incompatible with string [3]. [incompatible-type]

   map.js:14:10
     14|   return map;
                  ^^^

References:
   <BUILTINS>/core.js:1833:30
   1833| interface $IteratorProtocol<+Yield,+Return=void,-Next=void> {
                                      ^^^^^ [1]
   <BUILTINS>/core.js:2016:28
   2016|     @@iterator(): Iterator<[K, V]>;
                                    ^^^^^^ [2]
   map.js:13:55
     13| function mapTest4(map: Map<number, string>): Iterable<string> {
                                                               ^^^^^^ [3]


Error ----------------------------------------------------------------------------------------------------- set.js:14:10

Cannot return `set` because in property `@@iterator` > the return value > type argument `Yield` [1]: string [2] is
incompatible with number [3]. [incompatible-type]

   set.js:14:10
     14|   return set;
                  ^^^

References:
   <BUILTINS>/core.js:1833:30
   1833| interface $IteratorProtocol<+Yield,+Return=void,-Next=void> {
                                      ^^^^^ [1]
   set.js:13:28
     13| function setTest4(set: Set<string>): Iterable<number> {
                                    ^^^^^^ [2]
   set.js:13:47
     13| function setTest4(set: Set<string>): Iterable<number> {
                                                       ^^^^^^ [3]


Error ---------------------------------------------------------------------------------------------------- string.js:3:2

Cannot cast `new String(...)` to `Iterable` because in property `@@iterator` > the return value > type argument
`Yield` [1]: string [2] is incompatible with number [3]. [incompatible-type]

   string.js:3:2
      3| (new String("hi"): Iterable<number>); // Error - string is a Iterable<string>
          ^^^^^^^^^^^^^^^^

References:
   <BUILTINS>/core.js:1833:30
   1833| interface $IteratorProtocol<+Yield,+Return=void,-Next=void> {
                                      ^^^^^ [1]
   <BUILTINS>/core.js:1252:28
   1252|     @@iterator(): Iterator<string>;
                                    ^^^^^^ [2]
   string.js:3:29
      3| (new String("hi"): Iterable<number>); // Error - string is a Iterable<string>
                                     ^^^^^^ [3]



Found 8 errors
